add site flex,justify-content,align-items styles

--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
       <a href="#"
         ><img src="img/Akademnashr-logo.svg" alt="Akademnashr logo"
       /></a>
-      <nav>
-        <ul class="sitenav-list">
-          <li><a class="sitenav-link" href="#">Bosh sahifa </a></li>
-          <li><a class="sitenav-link" href="#">Kitoblar</a></li>
-          <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
-          <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
-        </ul>
-      </nav>
-
-      <a class="orange-btn" href="#">Ro’yxatdan o’tish</a>
+      <div class="site-header-right">
+        <nav>
+          <ul class="sitenav-list">
+            <li><a class="sitenav-link" href="#">Bosh sahifa </a></li>
+            <li><a class="sitenav-link" href="#">Kitoblar</a></li>
+            <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
+            <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
+          </ul>
+        </nav>
+        <a class="orange-btn" href="#">Ro’yxatdan o’tish</a>
+      </div>
     </header>
 
     <!-- MAIN -->
@@ -63,7 +64,7 @@
         <hr class="orange-line" />
 
         <h2 class="features-heading">Nega aynan Akademnashr?</h2>
-        <ul>
+        <ul class="features-list">
           <li class="features-item">
             <div class="features-icon-wrapper">
               <img src="img/cursor-click.svg" alt="cursor logo" />
@@ -97,18 +98,18 @@
         </ul>
       </section>
 
-      <!-- AKSIYA -->
-      <section class="aksiya">
-        <div class="aksiya-content">
-          <h2 class="aksiya-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-          <p class="aksiya-text">
+      <!-- PROMO -->
+      <section class="promo">
+        <div class="promo-content">
+          <h2 class="promo-heading">Bolalar kitoblari uchun ajoyib aksiya!</h2>
+          <p class="promo-text">
             Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun
             turli mashq qo’llanmalari va komikslar.
           </p>
-          <p class="aksiya-text">
+          <p class="promo-text">
             Aksiyadagi eng katta to’plamda
-            <b class="aksiya-highlight">50 ta kitob</b>ni
-            <b class="aksiya-highlight">350 ming</b> so’mga (aslida 383 ming
+            <b class="promo-highlight">50 ta kitob</b>ni
+            <b class="promo-highlight">350 ming</b> so’mga (aslida 383 ming
             so’m) sotib olishingiz mumkin.
           </p>
           <a class="orange-btn" href="#">Buyurtma berish</a>
@@ -124,11 +125,11 @@
 
     <!--SITE FOOTER -->
     <footer class="site-footer">
-      <div>
+      <div class="site-footer-top">
         <a href="#"
           ><img src="img/Akademnashr-logo.svg" alt="Akademnashr logo"
         /></a>
-        <ul>
+        <ul class="site-footer-socials">
           <li>
             <a href=""
               ><img src="img/icon-telegram.svg" alt="icon telegram"
@@ -149,7 +150,7 @@
 
       <hr class="footer-line" />
 
-      <div>
+      <div class="footer-links">
         <ul class="footer-list">
           <li><a href="#">Bosh sahifa</a></li>
           <li><a href="#">Kitoblar</a></li>
