--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <a class="orange-btn" href="#">Buyurtma berish</a>
         </div>
         <img
-          class="aksiya-img"
+          class="promo-img"
           src="img/sale-img.jpg"
           alt="sale img"
           srcset="img/sale-img.jpg 1x, img/sale-img@2x.jpg 2x"
